# TwoTowerRecEngine

./: .gitignore  docker-compose.yml  fb_feed_ranking.ipynb  fb_feed_ranking.py  pyproject.toml  readme.md  simple_embeddings.ipynb
models/: model_dims.pkl  post_scaler.pkl  two_tower_model.pth  user_scaler.pkl
prep/General/: 00_ml_glossary.md  01_core_paradigms.md  02_feature_engineering_data_prep.md  03_foundational_algorithms.md  04_tuning_and_evaluation.md  05_lightning_round_review.md  06_algorithm_cheat_sheet.md  07_metrics_cheat_sheet.md  08_mlp_deep_dive.md
prep/TwoTower/: 00_index.md  00_jargon_glossary.md  01_problem_understanding.md  02_retrieval_and_faiss.md  03_filtering_rules.md  04_ranker_deep_dive.md  04_ranking_and_dlrm.md  05_batched_softmax_brainstorm.md  05_reranking_and_calibration.md  06_evaluation.md  06_training_trace.md
research/: cross_check_feedranking.ipynb  fb_feed_ranking.ipynb  fb_feed_ranking.py  neural_net.ipynb
src/: docker-compose.yml
src/api/: data_model.py  dockerfile  main.py  requirements.txt
src/db/: db_helper.py
src/train/: data_gen.py  dockerfile  main.py  ranker_nn.py  ranker_trainer.py  requirements.txt  two_tower.py  two_tower_trainer.py  utils.py  verify_softmax.py
