[project]
name = "embeddings"
version = "0.1.0"
description = ""
authors = [
    {name = "Shubham Bhardwaj",email = "Shubbi.30nov@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
    "numpy (>=2.3.4,<3.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "torch (>=2.9.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
